--- a/index.css
+++ b/index.css
@@ -69,8 +69,8 @@ body {
 
 .text {
   position: absolute;
-  font-family: "Brush Script MT", cursive;
-  font-size: 28px;
+  font-family: "Dancing Script", cursive;
+  font-size: 26px;
   text-align: center;
   line-height: 25px;
   top: 20px;
