--- a/index.css
+++ b/index.css
@@ -247,13 +247,13 @@ body {
   }
 }
 
-#hearContainer {
+#heartContainer {
   width: 128px;
   height: 128px;
   transform: translate(-50%, -50%);
   position: absolute;
   left: 50%;
-  top: 70vh;
+  top: 80vh;
   overflow: visible;
 }
 
