--- a/index.css
+++ b/index.css
@@ -6,6 +6,23 @@ body {
   background-color: #fae1dd;
 }
 
+button {
+  position: absolute;
+  top: 71vh;
+  padding: 8px;
+  font-family: "Dancing Script", cursive;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+#yes {
+  left: 40vw;
+}
+
+#no {
+  left: 52vw;
+}
+
 .container {
   position: relative;
 }
@@ -253,7 +270,7 @@ body {
   transform: translate(-50%, -50%);
   position: absolute;
   left: 50%;
-  top: 80vh;
+  top: 85vh;
   overflow: visible;
 }
 
